@@ -1,3 +1,11 @@
+* Probability of using URLs was broken.
+   Thanks to Val Shkolnikov <val@nvsoft.net> the patch restoring it back.
+
+* Loading of configuration files sometimes failed due to passing to strtok
+   a char instead of a string.
+   Thanks to Val Shkolnikov <val@nvsoft.net> the patch fixing it.
+
+
 version 0.51, stable, January 18, svn 574
 
 * Releasing a new stable version. The last stable has been release
